--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <h1 class="hero-title">Creative <span class="typed" data-typed-items="Designer, Developer, Freelancer, Artist"></span></h1>
               <p class="lead">I create digital experiences that inspire and engage. With a passion for clean design and innovative solutions, I transform ideas into beautiful, functional realities.</p>
 
-              <!-- <div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
+              <!-- div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
                 <div class="stat-item">
                   <span class="purecounter" data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="2">0</span>
                   <span class="stat-label">Projects Completed</span>
