--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
                 <div class="action-buttons">
                   <a href="#portfolio" class="btn" style="background-color:#ff8000; color:white;">View My Work</a>
-                  <a href="assets/resume/SUNIL DM CV .pdf" class="btn" style="background-color:#ff8000; color:white;">Download Resume</a>
+                  <a href="assets/resume/SUNILDMCV.pdf" class="btn" style="background-color:#ff8000; color:white;">Download Resume</a>
                 </div>
               </div>
 
