--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@ Committed to driving Tech Mahindra’s digital transformation and brand growth t
 
                   <div class="col-12 text-center">
                     <div class="loading">Loading</div>
-                    <div class="error-message"></div>
+                    <!-- <div class="error-message"></div> -->
                     <div class="sent-message">Your message has been sent. Thank you!</div>
 
                     <button type="submit" class="btn">Send Message</button>
