--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
                 <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400">
                   <i class="bi bi-code-slash"></i>
-                  <span>Front-End Developer</span>
+                  <!-- <span>Front-End Developer</span> -->
                 </div>
                 <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="500">
                   <i class="bi bi-lightning"></i>
