--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                   <i class="bi bi-palette"></i>
                   <span>Digital Media & Content Creation</span>
                 </div>
-                <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400">
-                  <i class="bi bi-code-slash"></i>
+                <!-- <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400"> -->
+                  <!-- <i class="bi bi-code-slash"></i> -->
                   <!-- <span>Front-End Developer</span> -->
-                </div>
+                <!-- </div> -->
                 <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="500">
                   <i class="bi bi-lightning"></i>
                   <span>Digital Marketer</span>
