--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                   <i class="bi bi-palette"></i>
                   <span>Digital Media & Content Creation</span>
                 </div>
-                <!-- <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400"> -->
-                  <!-- <i class="bi bi-code-slash"></i> -->
-                  <!-- <span>Front-End Developer</span> -->
-                <!-- </div> -->
+                <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400">
+                  <i class="bi bi-code-slash"></i>
+                  <span>Web Developments Tools</span>
+                </div>
                 <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="500">
                   <i class="bi bi-lightning"></i>
                   <span>Digital Marketer</span>
@@ -224,7 +224,7 @@
                   <div class="skill-icon">
                     <i class="bi bi-code-slash"></i>
                   </div>
-                  <h4>Front-End DEV</h4>
+                  <h4>Web Development Tools</h4>
                   <p>CSS</p>
                   <p>HTML</p>
                   <p>Word Press</p>
@@ -396,12 +396,12 @@
                       <i class="bi bi-lightning"></i>
                       <h3>Soft Skills</h3>
                     </div>
-                    <div class="skills-animation">
-                      <div class="skill-item">
-                        <div class="skill-info">
-                          <span class="skill-name">MS-OFFICE</span>
-                          <span class="skill-percentage">90%</span>
-                        </div>
+                    <!-- <div class="skills-animation"> -->
+                      <!-- <div class="skill-item"> -->
+                        <!-- <div class="skill-info"> -->
+                          <!-- <span class="skill-name">MS-OFFICE</span> -->
+                          <!-- <span class="skill-percentage">90%</span> -->
+                        <!-- </div> -->
                         <div class="skill-bar progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
