--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
                       <i class="bi bi-lightning"></i>
                       <h3>Soft Skills</h3>
                     </div>
-                    <!-- <div class="skills-animation"> -->
-                      <!-- <div class="skill-item"> -->
-                        <!-- <div class="skill-info"> -->
+                    <div class="skills-animation">
+                      <div class="skill-item">
+                        <div class="skill-info">
                           <!-- <span class="skill-name">MS-OFFICE</span> -->
                           <!-- <span class="skill-percentage">90%</span> -->
-                        <!-- </div> -->
+                        </div>
                         <div class="skill-bar progress">
                           <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
