--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
                 <div class="floating-card card-2" data-aos="zoom-in" data-aos-delay="400">
                   <i class="bi bi-code-slash"></i>
-                  <span>Web Developments Tools</span>
+                  <span>Web Development Tools</span>
                 </div>
                 <div class="floating-card card-3" data-aos="zoom-in" data-aos-delay="500">
                   <i class="bi bi-lightning"></i>
@@ -274,7 +274,7 @@
                   <div class="skill-card">
                     <div class="skill-header">
                       <i class="bi bi-code-slash"></i>
-                      <h3>Frontend Development</h3>
+                      <h3>Web Development Tools</h3>
                     </div>
                     <div class="skills-animation">
                       <div class="skill-item">
