--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
                       <i class="bi bi-lightning"></i>
                       <h3>Soft Skills</h3>
                     </div>
-                    <!-- <div class="skills-animation"> -->
-                      <!-- <div class="skill-item"> -->
+                    <div class="skills-animation">
+                      <div class="skill-item">
                         <!-- <div class="skill-info"> -->
                           <!-- <span class="skill-name">MS-OFFICE</span> -->
                           <!-- <span class="skill-percentage">90%</span> -->
