--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     </div>
                     <div class="skills-animation">
                       <div class="skill-item">
-                        <!-- <div class="skill-info"> -->
+                        <div class="skill-info">
                           <!-- <span class="skill-name">MS-OFFICE</span> -->
                           <!-- <span class="skill-percentage">90%</span> -->
                         </div>
