--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                   <div class="skill-card">
                     <div class="skill-header">
                       <i class="bi bi-palette"></i>
-                      <h3>Design &amp; Tools</h3>
+                      <h3>Design Tools</h3>
                     </div>
                     <div class="skills-animation">
                       <div class="skill-item">
